Stick with dorpdownParent:body, and fix selective menu z-index

--- a/src/web/assets/cp/src/css/_main.scss
+++ b/src/web/assets/cp/src/css/_main.scss
@@ -6634,7 +6634,7 @@ tr.indexingSession td.progress div.progressContainer div.progressInfo {
 
 body .selectize-dropdown {
   border: none;
-  z-index: 100;
+  z-index: 101;
 }
 
 /* single select styles */
